--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="instagram-wapper">
         <div class="instagram-phone">
-            <img src="img/iphone.png" alt="celular">
+            <img src="img/phone.png" alt="celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="img/instagram_logo_icon_.png" class="instagram-logo" alt="instagram-logo">
+                <img src="img/instagram-topo.png" class="instagram-logo" alt="instagram-logo">
                 <div class="profile-photo">
                     <img src="img/my-photo.jpg" alt="Minha photo">
                 </div>
@@ -22,7 +22,7 @@
                 <a href="" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não tem uma conta</p>
+                <p class="not-account">Não tem é Anonymous?</p>
                 <div class="notaccount">
                     <span class="link-blue">Alterar conta</span>
                     ou
